SVG placeholders are in correct spot but have too large of hitbox

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ a.svg {
   left:0;
 } .logo-container {
   margin-top: 15px;
+  margin-bottom: 15px;
   height: 0;
   padding-bottom: 33.33333333333333%;
 } #logo {
@@ -57,38 +58,40 @@ a.svg {
   top:0;
   left:0;
   padding: 0;
-  margin: 0;
-  width: 100%; 
-  height: 100%; 
+  margin-left: 15px;
+  width: 95%; 
+  height: 95%; 
 } .button-container {
-  margin-top: 15px;
+  margin-left: 33.3333333333%;
+  margin-right: 33.3333333333%;
   height: 0;
-  padding-bottom: 33.33333333333333%;
+  padding-bottom: 33.3333333333%;
+  /*padding-bottom: 16.6666666667%;*/
 } #forum {
   display: inline-block;
   position: absolute;
   top:0;
   left:0;
-  padding: 5%;
-  margin: 20%;
-  width: 50%; 
-  height: 50%; 
+  padding: 0%;
+  margin: 0%;
+  width: 100%; 
+  height: 100%; 
 } #about {
   display: inline-block;
   position: absolute;
   top:0;
   left:0;
-  padding: 5%;
-  margin: 0;
-  width: 50%; 
-  height: 50%; 
+  padding: 0%;
+  margin: 0%;
+  width: 100%; 
+  height: 100%; 
 } #games {
   display: inline-block;
   position: absolute;
   top:0;
   left:0;
-  padding: 5%;
-  margin: 0;
-  width: 50%; 
-  height: 50%; 
+  padding: 0%;
+  margin: 0%;
+  width: 100%; 
+  height: 100%; 
 } 
